Made info panel allele frequency bars thicker so that the number could be placed inside to avoid any overlap between the label of the bar and the percent when on small displays.

--- a/inst/d3/info_panel/info_panel.css
+++ b/inst/d3/info_panel/info_panel.css
@@ -64,3 +64,8 @@ h1, h2 {
 .location table {
   font-size: 1.25rem;
 }
+
+.instructions {
+  padding-top: '1rem';
+  overflow: scroll;
+}
